--- a/nbs/T043789_Training_RL_Agent_in_CartPole_Environment_with_Actor_Critic_method.ipynb
+++ b/nbs/T043789_Training_RL_Agent_in_CartPole_Environment_with_Actor_Critic_method.ipynb
@@ -1,31 +1,13 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "T043789 | Training RL Agent in CartPole Environment with Actor-Critic method",
-      "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMqmVBsoiHiDw0f6yiNuEgc",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/RecoHut-Projects/drl-recsys/blob/S990517/tutorials/T043789_Training_RL_Agent_in_CartPole_Environment_with_Actor_Critic_method.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/RecoHut-Stanzas/S990517/blob/main/nbs/T043789_Training_RL_Agent_in_CartPole_Environment_with_Actor_Critic_method.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -39,23 +21,25 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "7QLHLqC1_ivD"
       },
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import tensorflow as tf\n",
         "import gym\n",
         "import tensorflow_probability as tfp"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "vLAh4L1h_j0e"
       },
+      "outputs": [],
       "source": [
         "class ActorCritic(tf.keras.Model):\n",
         "    def __init__(self, action_dim):\n",
@@ -71,15 +55,15 @@
         "        actor = self.actor(x1)\n",
         "        critic = self.critic(x1)\n",
         "        return critic, actor"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "QReTNLPx_lWZ"
       },
+      "outputs": [],
       "source": [
         "class Agent:\n",
         "    def __init__(self, action_dim=4, gamma=0.99):\n",
@@ -125,15 +109,15 @@
         "        grads = tape.gradient(total_loss, self.actor_critic.trainable_variables)\n",
         "        self.opt.apply_gradients(zip(grads, self.actor_critic.trainable_variables))\n",
         "        return total_loss"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "pnpydnWc_orT"
       },
+      "outputs": [],
       "source": [
         "def train(agent, env, episodes, render=True):\n",
         "    \"\"\"Train `agent` in `env` for `episodes`\n",
@@ -164,12 +148,11 @@
         "            if done:\n",
         "                print(\"\\n\")\n",
         "            print(f\"Episode#:{episode} ep_reward:{total_reward}\", end=\"\\r\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -177,20 +160,10 @@
         "id": "_jg1Vo-N_paC",
         "outputId": "0425833e-6475-4ab0-cb46-a4d1312707fa"
       },
-      "source": [
-        "if __name__ == \"__main__\":\n",
-        "\n",
-        "    env = gym.make(\"CartPole-v0\")\n",
-        "    agent = Agent(env.action_space.n)\n",
-        "    num_episodes = 10  #  Increase number of episodes to train\n",
-        "    # Set render=True to visualize Agent's actions in the env\n",
-        "    train(agent, env, num_episodes, render=False)"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Episode#:0 ep_reward:1.0\rEpisode#:0 ep_reward:2.0\rEpisode#:0 ep_reward:3.0\rEpisode#:0 ep_reward:4.0\rEpisode#:0 ep_reward:5.0\rEpisode#:0 ep_reward:6.0\rEpisode#:0 ep_reward:7.0\rEpisode#:0 ep_reward:8.0\rEpisode#:0 ep_reward:9.0\rEpisode#:0 ep_reward:10.0\r\n",
             "\n",
@@ -214,6 +187,15 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "if __name__ == \"__main__\":\n",
+        "\n",
+        "    env = gym.make(\"CartPole-v0\")\n",
+        "    agent = Agent(env.action_space.n)\n",
+        "    num_episodes = 10  #  Increase number of episodes to train\n",
+        "    # Set render=True to visualize Agent's actions in the env\n",
+        "    train(agent, env, num_episodes, render=False)"
       ]
     },
     {
@@ -227,6 +209,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -234,16 +217,10 @@
         "id": "xxO4q8Uo_sW-",
         "outputId": "f8b10262-5828-438c-d30d-812dd45bc602"
       },
-      "source": [
-        "!pip install -q watermark\n",
-        "%reload_ext watermark\n",
-        "%watermark -a \"Sparsh A.\" -m -iv -u -t -d"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Author: Sparsh A.\n",
             "\n",
@@ -265,6 +242,11 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install -q watermark\n",
+        "%reload_ext watermark\n",
+        "%watermark -a \"Sparsh A.\" -m -iv -u -t -d"
       ]
     },
     {
@@ -285,5 +267,23 @@
         "**END**"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMqmVBsoiHiDw0f6yiNuEgc",
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "T043789 | Training RL Agent in CartPole Environment with Actor-Critic method",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
